==> MKFirmware/MarlinKimbra4due/MarlinKimbra4due/Sd2Card.cpp <==
#include "Marlin.h"
#include "Sd2Card.h"
#include <SPI.h>

static void spiInit(void) {
	SPI.end();
	//todo: check these settings
	SPI.begin();
	SPI.setDataMode (SPI_MODE0);
	SPI.setBitOrder(MSBFIRST);
}

static uint8_t spiRec() {
    return SPI.transfer(0xFF);
}

static void spiSend(uint8_t b) {
    SPI.transfer(b);
}
