==> MarlinFirmware/Marlin/Marlin/Sd2Card.cpp <==
#include "Marlin.h"
#include "Sd2Card.h"

  static void spiInit(uint8_t spiRate) {
    // See avr processor documentation
    SPCR = _BV(SPE) | _BV(MSTR) | (spiRate >> 1);
    SPSR = spiRate & 1 || spiRate == 6 ? 0 : _BV(SPI2X);
  }

  static uint8_t spiRec() {
    SPDR = 0XFF;
    while (!TEST(SPSR, SPIF)) { /* Intentionally left empty */ }
    return SPDR;
  }

  static void spiSend(uint8_t b) {
    SPDR = b;
    while (!TEST(SPSR, SPIF)) { /* Intentionally left empty */ }
  }

  static uint8_t spiRec() {
    uint8_t data = 0;
    // no interrupts during byte receive - about 8 us
    cli();
    // output pin high - like sending 0XFF
    fastDigitalWrite(SPI_MOSI_PIN, HIGH);

    for (uint8_t i = 0; i < 8; i++) {
      fastDigitalWrite(SPI_SCK_PIN, HIGH);

      // adjust so SCK is nice
      nop;
      nop;

      data <<= 1;

      if (fastDigitalRead(SPI_MISO_PIN)) data |= 1;

      fastDigitalWrite(SPI_SCK_PIN, LOW);
    }
    // enable interrupts
    sei();
    return data;
  }

  static void spiSend(uint8_t data) {
    // no interrupts during byte send - about 8 us
    cli();
    for (uint8_t i = 0; i < 8; i++) {
      fastDigitalWrite(SPI_SCK_PIN, LOW);

      fastDigitalWrite(SPI_MOSI_PIN, data & 0X80);

      data <<= 1;

      fastDigitalWrite(SPI_SCK_PIN, HIGH);
    }
    // hold SCK high for a few ns
    nop;
    nop;
    nop;
    nop;

    fastDigitalWrite(SPI_SCK_PIN, LOW);
    // enable interrupts
    sei();
  }
